# roodb

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  LOCKING.md  README.md  SQL.md  TODO.md  admin.md  design.md  docker-compose.yml  issues.md  mtesting.md  plan.md
.github/workflows/: ci.yml  container.yml
bench/: compare.sh  run.sh
docker/: entrypoint.sh
scripts/: analyze-profile.sh  perf-profile.sh
src/: catalog.rs  lib.rs  main.rs  tls.rs
src/catalog/: mod.rs  system_tables.rs
src/executor/: aggregate.rs  analyze.rs  auth.rs  context.rs  datum.rs  ddl.rs  delete.rs  distinct.rs  encoding.rs  engine.rs  error.rs  eval.rs  explain_exec.rs  filter.rs  geometry.rs  hash_join.rs  insert.rs  insert_select.rs  join.rs  json.rs  limit.rs  mod.rs  multi_exec.rs  point_get.rs  procedure.rs  project.rs  range_scan.rs  row.rs  scan.rs  single_row.rs  sort.rs  trigger.rs  union.rs  update.rs  window.rs
src/init/: mod.rs
src/io/: aligned_buffer.rs  error.rs  iocp.rs  mod.rs  posix_aio.rs  traits.rs  uring.rs
src/io/scheduler/: backpressure.rs  batch.rs  batcher.rs  config.rs  engine.rs  limiter.rs  metrics.rs  mod.rs  scheduler.rs  throughput.rs
src/io/uring/: mod.rs
src/planner/: cost.rs  error.rs  explain.rs  mod.rs  optimizer.rs  physical.rs  test_utils.rs
src/planner/logical/: builder.rs  expr.rs  mod.rs
src/planner/optimizer/: mod.rs  rules.rs
src/planner/physical/: mod.rs  planner.rs
src/protocol/: mod.rs
src/protocol/mysql/: auth.rs  command.rs  error.rs  handshake.rs  mod.rs  packet.rs  prepared.rs  resultset.rs  starttls.rs  types.rs
src/protocol/roodb/: auth.rs  binary.rs  command.rs  error.rs  handshake.rs  metrics.rs  mod.rs  packet.rs  prepared.rs  resultset.rs  starttls.rs  types.rs
src/protocol/tds/: codec.rs  connection.rs  login.rs  mod.rs  params.rs  prelogin.rs  token.rs  types.rs
src/raft/: changes.rs  lsm_storage.rs  mod.rs  network.rs  node.rs  storage.rs  types.rs
src/server/: handler.rs  init.rs  listener.rs  locks.rs  mod.rs  session.rs
src/sql/: ast.rs  error.rs  mod.rs  parser.rs  privileges.rs  resolver.rs  typecheck.rs
src/storage/: error.rs  mod.rs  row_id.rs  schema_version.rs  traits.rs
src/storage/lsm/: block.rs  block_cache.rs  bloom.rs  compaction.rs  engine.rs  manifest.rs  memtable.rs  merge_iter.rs  mod.rs  sstable.rs
src/txn/: manager.rs  mod.rs  mvcc_storage.rs  purge.rs  read_view.rs  transaction.rs  undo_log.rs
src/wal/: error.rs  manager.rs  mod.rs  record.rs  segment.rs
tests/: executor_tests.rs  io_integration.rs  planner_tests.rs  protocol_tests.rs  raft_cluster.rs  sql_tests.rs  storage_tests.rs  suite.rs  wal_tests.rs
tests/mysql_compat/: run_mtr_tests.py  run_mysql_tests.py
tests/mysql_compat/mtr_r/: aggregate_expressions.result  aggregate_subquery_mix.result  alias.result  alter_table.result  ansi.result  any_value_agg.result  auto_increment.result  bigint.result  binary_to_hex.result  bool.result  bug28940878.result  bulk_replace.result  case.result  cast.result  comments.result  compare.reject  compare.result  constraints.result  correlated_subquery.result  count_distinct.result  count_distinct2.result  create_if_not_exists.result  create_table_select.result  cross_join.result  cte_basic.result  ctype_ascii.result  ctype_latin1.result  ctype_utf8.result  date_formats.result  date_func_patterns.result  decimal_arithmetic.result  delete.result  delete_where.result  derived.result  distinct.result  dml_subquery.result  drop.result  (+147 more)
tests/roodb_suite/: harness.rs  mod.rs
tests/test_utils/: auth.rs  binary_server.rs  certs.rs  cleanup.rs  mod.rs  server_manager.rs
(+263 files in other folders)
