[package]
name = "roodb"
version = "0.5.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "net", "time", "process"] }

# Error handling
thiserror = "1.0"

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Platform detection
cfg-if = "1.0"

# Raft consensus
openraft = { version = "0.9", features = ["serde", "storage-v2"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Checksums
crc32fast = "1.3"

# Async traits
async-trait = "0.1"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TLS (required - no plaintext networking)
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "std", "tls12"] }
tokio-rustls = "0.26"
webpki-roots = "0.26"
rustls-pemfile = "2"

# Bytes handling
bytes = "1.0"

# Synchronization primitives
parking_lot = "0.12"

# Compression
lz4_flex = "0.11"

# SQL parsing
sqlparser = { version = "0.50", features = ["visitor"] }

# Ordered floats for sorting
ordered-float = "4.2"

# MySQL protocol support
sha1 = "0.10"
rand = "0.8"
bitflags = "2.4"
regex = "1"
lazy_static = "1.4"

# Password hashing
argon2 = "0.5"

# Hex encoding
hex = "0.4"

# Linux-only dependencies
[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
# MySQL client for integration tests (uses rustls with aws-lc-rs)
mysql_async = { version = "0.36", default-features = false, features = ["minimal-rust", "rustls-tls", "aws-lc-rs"] }

[lib]
name = "roodb"
path = "src/lib.rs"

[[bin]]
name = "roodb"
path = "src/main.rs"

[[bin]]
name = "roodb_init"
path = "src/bin/roodb_init.rs"
